src/runtime/zig/lean_rt.zig

pub extern fn lean_uint64_dec_le(_0: u64, _1: u64) callconv(.c) u8;
pub extern fn lean_uint64_dec_lt(_0: u64, _1: u64) callconv(.c) u8;
pub extern fn lean_uint64_div(_0: u64, _1: u64) callconv(.c) u64;
pub extern fn lean_uint64_land(_0: u64, _1: u64) callconv(.c) u64;
pub extern fn lean_uint64_log2(_0: u64) callconv(.c) u64;
pub extern fn lean_uint64_lor(_0: u64, _1: u64) callconv(.c) u64;
pub extern fn lean_uint64_mix_hash(_0: u64, _1: u64) callconv(.c) u64;
pub extern fn lean_uint64_mod(_0: u64, _1: u64) callconv(.c) u64;
pub extern fn lean_uint64_mul(_0: u64, _1: u64) callconv(.c) u64;
pub extern fn lean_uint64_neg(_0: u64) callconv(.c) u64;
pub extern fn lean_uint64_of_nat_mk(_0: LeanObj) callconv(.c) u64;
pub extern fn lean_uint64_once_cold(_0: *u64, _1: *lean_once_cell_t, _2: *const fn () callconv(.c) u64) callconv(.c) u64;
pub extern fn lean_uint64_shift_left(_0: u64, _1: u64) callconv(.c) u64;
pub extern fn lean_uint64_shift_right(_0: u64, _1: u64) callconv(.c) u64;
pub extern fn lean_uint64_sub(_0: u64, _1: u64) callconv(.c) u64;
pub extern fn lean_uint64_to_float(_0: u64) callconv(.c) f64;
pub extern fn lean_uint64_to_float32(_0: u64) callconv(.c) f32;
pub extern fn lean_uint64_to_uint16(_0: u64) callconv(.c) u16;
pub extern fn lean_uint64_to_uint32(_0: u64) callconv(.c) u32;
pub extern fn lean_uint64_to_uint8(_0: u64) callconv(.c) u8;
pub extern fn lean_uint64_to_usize(_0: u64) callconv(.c) usize;
pub extern fn lean_uint64_xor(_0: u64, _1: u64) callconv(.c) u64;
pub extern fn lean_uint8_add(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_uint8_complement(_0: u8) callconv(.c) u8;
pub extern fn lean_uint8_dec_le(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_uint8_dec_lt(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_uint8_div(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_uint8_log2(_0: u8) callconv(.c) u8;
pub extern fn lean_uint8_lor(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_uint8_mod(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_uint8_mul(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_uint8_neg(_0: u8) callconv(.c) u8;
pub extern fn lean_uint8_of_big_nat(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_uint8_of_nat(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_uint8_of_nat_mk(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_uint8_once_cold(_0: *u8, _1: *lean_once_cell_t, _2: *const fn () callconv(.c) u8) callconv(.c) u8;
pub extern fn lean_uint8_shift_left(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_uint8_shift_right(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_uint8_sub(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_uint8_to_float(_0: u8) callconv(.c) f64;
pub extern fn lean_uint8_to_float32(_0: u8) callconv(.c) f32;
pub extern fn lean_uint8_to_nat(_0: u8) callconv(.c) LeanObj;
pub extern fn lean_uint8_to_uint16(_0: u8) callconv(.c) u16;
pub extern fn lean_uint8_to_uint64(_0: u8) callconv(.c) u64;
pub extern fn lean_uint8_to_usize(_0: u8) callconv(.c) usize;
pub extern fn lean_uint8_xor(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_unbox_uint16_zig_impl(_0: LeanObj) callconv(.c) u16;
pub extern fn lean_unbox_uint8_zig_impl(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_usize_add_would_overflow(_0: usize, _1: usize) callconv(.c) bool;
pub extern fn lean_usize_complement(_0: usize) callconv(.c) usize;
pub extern fn lean_usize_dec_le(_0: usize, _1: usize) callconv(.c) u8;
pub extern fn lean_usize_dec_lt(_0: usize, _1: usize) callconv(.c) u8;
pub extern fn lean_usize_div(_0: usize, _1: usize) callconv(.c) usize;
pub extern fn lean_usize_land(_0: usize, _1: usize) callconv(.c) usize;
pub extern fn lean_usize_log2(_0: usize) callconv(.c) usize;
pub extern fn lean_usize_lor(_0: usize, _1: usize) callconv(.c) usize;
pub extern fn lean_usize_mod(_0: usize, _1: usize) callconv(.c) usize;
pub extern fn lean_usize_mul(_0: usize, _1: usize) callconv(.c) usize;
pub extern fn lean_usize_mul_would_overflow(_0: usize, _1: usize) callconv(.c) bool;
pub extern fn lean_usize_neg(_0: usize) callconv(.c) usize;
pub extern fn lean_usize_of_big_nat(_0: LeanObj) callconv(.c) usize;
pub extern fn lean_usize_of_nat_mk(_0: LeanObj) callconv(.c) usize;
pub extern fn lean_usize_once_cold(_0: *usize, _1: *lean_once_cell_t, _2: *const fn () callconv(.c) usize) callconv(.c) usize;
pub extern fn lean_usize_shift_left(_0: usize, _1: usize) callconv(.c) usize;
pub extern fn lean_usize_shift_right(_0: usize, _1: usize) callconv(.c) usize;
pub extern fn lean_usize_sub(_0: usize, _1: usize) callconv(.c) usize;
pub extern fn lean_usize_to_float(_0: usize) callconv(.c) f64;
pub extern fn lean_usize_to_float32(_0: usize) callconv(.c) f32;
pub extern fn lean_usize_to_uint16(_0: usize) callconv(.c) u16;
pub extern fn lean_usize_to_uint32(_0: usize) callconv(.c) u32;
pub extern fn lean_usize_to_uint64(_0: usize) callconv(.c) u64;
pub extern fn lean_usize_to_uint8(_0: usize) callconv(.c) u8;
pub extern fn lean_usize_xor(_0: usize, _1: usize) callconv(.c) usize;
pub extern fn lean_utf8_n_strlen(_0: ?*anyopaque, _1: usize) callconv(.c) usize;
pub extern fn lean_utf8_strlen(_0: ?*anyopaque) callconv(.c) usize;
pub extern fn lean_uv_chdir(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_cpu_info() callconv(.c) LeanObj;
pub extern fn lean_uv_cwd() callconv(.c) LeanObj;
pub extern fn lean_uv_dns_get_info(_0: LeanObj, _1: LeanObj, _2: u8) callconv(.c) LeanObj;
pub extern fn lean_uv_dns_get_name(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_event_loop_alive() callconv(.c) u8;
pub extern fn lean_uv_event_loop_configure(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_exepath() callconv(.c) LeanObj;
pub extern fn lean_uv_get_available_memory() callconv(.c) LeanObj;
pub extern fn lean_uv_get_constrained_memory() callconv(.c) LeanObj;
pub extern fn lean_uv_get_free_memory() callconv(.c) LeanObj;
pub extern fn lean_uv_get_process_title() callconv(.c) LeanObj;
pub extern fn lean_uv_get_total_memory() callconv(.c) LeanObj;
pub extern fn lean_uv_getrusage() callconv(.c) LeanObj;
pub extern fn lean_uv_hrtime() callconv(.c) LeanObj;
pub extern fn lean_uv_interface_addresses() callconv(.c) LeanObj;
pub extern fn lean_uv_ntop_v4(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_ntop_v6(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_os_environ() callconv(.c) LeanObj;
pub extern fn lean_uv_os_get_group(_0: u64) callconv(.c) LeanObj;
pub extern fn lean_uv_os_get_passwd() callconv(.c) LeanObj;
pub extern fn lean_uv_os_getenv(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_os_gethostname() callconv(.c) LeanObj;
pub extern fn lean_uv_os_getpid() callconv(.c) LeanObj;
pub extern fn lean_uv_os_getppid() callconv(.c) LeanObj;
pub extern fn lean_uv_os_getpriority(_0: u64) callconv(.c) LeanObj;
pub extern fn lean_uv_os_homedir() callconv(.c) LeanObj;
pub extern fn lean_uv_os_setenv(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_os_setpriority(_0: u64, _1: u64) callconv(.c) LeanObj;
pub extern fn lean_uv_os_tmpdir() callconv(.c) LeanObj;
pub extern fn lean_uv_os_uname() callconv(.c) LeanObj;
pub extern fn lean_uv_os_unsetenv(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_pton_v4(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_pton_v6(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_random(_0: u64) callconv(.c) LeanObj;
pub extern fn lean_uv_set_process_title(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_signal_cancel(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_signal_mk(_0: u32, _1: u8) callconv(.c) LeanObj;
pub extern fn lean_uv_signal_next(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_signal_stop(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_accept(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_bind(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_cancel_accept(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_cancel_recv(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_connect(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_getpeername(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_getsockname(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_keepalive(_0: LeanObj, _1: u8, _2: u32) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_listen(_0: LeanObj, _1: u32) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_new() callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_nodelay(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_recv(_0: LeanObj, _1: u64) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_send(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_shutdown(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_try_accept(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_tcp_wait_readable(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_timer_cancel(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_timer_mk(_0: u64, _1: u8) callconv(.c) LeanObj;
pub extern fn lean_uv_timer_next(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_timer_reset(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_timer_stop(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_bind(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_cancel_recv(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_connect(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_getpeername(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_getsockname(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_new() callconv(.c) LeanObj;
pub extern fn lean_uv_udp_recv(_0: LeanObj, _1: u64) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_send(_0: LeanObj, _1: LeanObj, _2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_set_broadcast(_0: LeanObj, _1: u8) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_set_membership(_0: LeanObj, _1: LeanObj, _2: LeanObj, _3: u8) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_set_multicast_interface(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_set_multicast_loop(_0: LeanObj, _1: u8) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_set_multicast_ttl(_0: LeanObj, _1: u32) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_set_ttl(_0: LeanObj, _1: u32) callconv(.c) LeanObj;
pub extern fn lean_uv_udp_wait_readable(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uv_uptime() callconv(.c) LeanObj;
pub extern fn lean_version_get_is_release(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_version_get_major(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_version_get_minor(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_version_get_patch(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_version_get_special_desc(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_void_mk(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_windows_get_next_transition(_0: LeanObj, _1: u64, _2: u8) callconv(.c) LeanObj;
pub extern fn lean_zig_current_task_get() callconv(.c) LeanObj;
pub extern fn lean_zig_current_task_swap(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn log(_0: f64) callconv(.c) f64;
pub extern fn log10(_0: f64) callconv(.c) f64;
pub extern fn log10f(_0: f32) callconv(.c) f32;
pub extern fn log2(_0: f64) callconv(.c) f64;
pub extern fn log2f(_0: f32) callconv(.c) f32;
pub extern fn logf(_0: f32) callconv(.c) f32;
pub extern fn pow(_0: f64, _1: f64) callconv(.c) f64;
pub extern fn powf(_0: f32, _1: f32) callconv(.c) f32;
pub extern fn round(_0: f64) callconv(.c) f64;
pub extern fn roundf(_0: f32) callconv(.c) f32;
pub extern fn sin(_0: f64) callconv(.c) f64;
pub extern fn sinf(_0: f32) callconv(.c) f32;
pub extern fn sinh(_0: f64) callconv(.c) f64;
pub extern fn sinhf(_0: f32) callconv(.c) f32;
pub extern fn sqrt(_0: f64) callconv(.c) f64;
pub extern fn sqrtf(_0: f32) callconv(.c) f32;
pub extern fn tan(_0: f64) callconv(.c) f64;
